--- a/src/styles/blocks/reset.scss
+++ b/src/styles/blocks/reset.scss
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 ul {
   padding: 0;
   margin: 0;
@@ -8,5 +12,4 @@ ul {
 a {
   text-decoration: none;
 }
-
 
