--- a/src/styles/blocks/variables.scss
+++ b/src/styles/blocks/variables.scss
@@ -1,6 +1,9 @@
 $color-background: #fff;
 $color-main: #060b35;
 $color-secondary: #616070;
+$color-title-hover: #34568b;
 $color-blue: #00acdc;
+$color-card-border: #f3f3f3;
 $card-width: 200px;
 $transition-time: 0.3s;
+
